Moved all account-related functions to SettingsAccount component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,8 +12,15 @@
       "SIGNUP": "Sign Up"
     },
     "HOME": {
-      "TITLE": "Home",
-      "SIGNOUT": "Sign Out"
+      "TITLE": "Home"
+    },
+    "SETTINGS": {
+      "ACCOUNT": {
+        "TITLE": "Account",
+        "SIGNOUT": "Sign Out",
+        "CHANGESKIN": "Change skin",
+        "UPLOADSKIN": "Upload skin"
+      }
     }
   }
 }
